# OpenSpatial

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  visualize_server.py
metadata/: README.md  metadata_spec_v0_zh.md  metadata_wiki_v0_zh.md  pyproject.toml  setup.py
metadata/configs/: global.yaml
metadata/docs/: config_yaml_zh.md  dataset_structure_embodiedscan_omni3d_zh.md  docs_sync_convention_zh.md  metadata_spec_v0_zh.md  metadata_wiki_v0_zh.md  project_progress_zh.md  qa_2d_spatial_relation_strategy_zh.md  training_data_format_zh.md
metadata/scripts/: count_metadata_qa_stats.py  count_training_dataset.py  extract_part_tars_to_root.py  generate_2d_spatial_relation_artifacts.py  preview_grounding_qa_adapter.py
metadata/tests/: adapter_chain_test_helpers.py  conftest.py  llm_param_probe.py  spatial_relation_2d_artifacts.py  test_adapter_chain.py  test_adapter_grounding_qa.py  test_adapters_3d_sources.py  test_cli_checkpoints_scoped.py  test_cli_dataset_meta.py  test_cli_dataset_output_root.py  test_cli_e2e_refcoco_small.py  test_cli_enrich_config.py  test_cli_global_llm_defaults.py  test_cli_max_records_limit.py  test_cli_max_records_total_limit.py  test_cli_phase_timing.py  test_enrich_relation2d.py  test_enrich_relation3d.py  test_export_grouping.py  test_export_paths.py  test_expression_refresh_qwen.py  test_framework_unittest.py  test_grounding_export_e2e.py  test_image_archive_training_export.py  test_io_json_resume_skip.py  test_metadata_relation_id.py  test_object_dedup_exact_adapter.py  test_parallel_cli.py  test_qa_items_schema.py  test_qa_spatial_relation_2d.py  test_qa_spatial_relation_3d.py  test_qa_tasks_registry.py  test_records_parallelism_order.py  test_schema_queries.py  test_spatial_relation_2d_annotation_task.py  test_training_export_shard_progress.py  test_training_export_streaming_modes.py  test_training_pipeline_batching_perf.py  test_viz_config_index.py  (+4 more)
(+303 files in other folders)
